--- a/README
+++ b/README
@@ -2,3 +2,5 @@ Bi fitxero:
 
 Denak_Batera:csv: datu guztiak (AEMET+Meteoprades)
 eguraldia_str.py: python kodea, Streamlit-ekin
+
+GOGORATU: 'Denak_batera.csv'-ren kokapena aldatu hemen!!
