--- a/README
+++ b/README
@@ -5,5 +5,23 @@ eguraldia_str.py: python kodea, Streamlit-ekin
 
 GOGORATU: 'Denak_batera.csv'-ren kokapena aldatu hemen!!
 
+!=================
+!=================
+GIT tutoriala:
+https://www.geeksforgeeks.org/how-to-install-configure-and-use-git-on-ubuntu/
 
-kk
+-Nire datuak:
+   git config --list
+
+ git init
+ git remote add origin https://github.com/niregauzak/igotzeko.git
+
+ git add .
+ git commit -m 'probatxoa 1'
+ git push origin main
+
+ Agian:
+ git config --global credential.credentialStore gpg
+
+Lortu det!! Baina ez dakit oso ondo nola...
+
